spade-tests/src/snapshots/spade_tests__parser__array_shorthand_ident_length.snap
---
source: spade-tests/src/parser.rs
---
fn test() {
    let length: uint<8> = 24;
    let _: [uint<2>; 1] = [1u2; length];
}


error: Expected length to be a type
  ┌─ testinput:3:33
  │
2 │     let length: uint<8> = 24;
  │         ------ length is a variable
3 │     let _: [uint<2>; 1] = [1u2; length];
  │                                 ^^^^^^ Expected a type
